<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tdDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tdDescricao"
        android:layout_centerHorizontal="true"
        android:text="@string/total" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tdDescricao"
        android:layout_toEndOf="@+id/textView37"
        android:layout_toRightOf="@+id/textView37"
        android:text="@string/money" />

    <TextView
        android:id="@+id/tdPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tdDescricao"
        android:layout_toEndOf="@+id/textView38"
        android:layout_toRightOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tdDescricao"
        android:text="@string/qtd" />

    <TextView
        android:id="@+id/tdQtd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tdDescricao"
        android:layout_toEndOf="@+id/textView40"
        android:layout_toRightOf="@+id/textView40" />

</RelativeLayout>
