<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.adsddm.pedidovenda.controller.PedidoVendaActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/txtVendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/vendedor" />

                <Spinner
                    android:id="@+id/snVendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtVendedor"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/tr"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/snVendedor"
                    android:layout_marginTop="11dp"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txtCPF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tr"
                    android:layout_marginTop="11dp"
                    android:text="CPF"
                    android:digits="maskCPF"/>

                <EditText
                    android:id="@+id/etCPF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txtCPF"
                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/txtCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/etCPF"
                    android:layout_marginTop="11dp"
                    android:text="@string/cliente" />

                <EditText
                    android:id="@+id/etCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txtCliente"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@string/clienteNome" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabtnPesquisaCliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/etCPF"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_search" />

                <TextView
                    android:id="@+id/tr2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/etCliente"
                    android:layout_marginTop="11dp"
                    android:background="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnAddProduto"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:text="Adicionar Produto"
                    android:layout_below="@+id/tr2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ListView
                    android:id="@+id/lvProdutos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                </ListView>

                <TextView
                    android:id="@+id/txtSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/lvProdutos"
                    android:layout_marginTop="16dp"
                    android:text="@string/subTotal" />

                <EditText
                    android:id="@+id/etSubTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txtSubTotal"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    android:text="@string/dinheiro" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/btnAddProduto"
                    android:layout_marginTop="11dp"
                    android:text="Preço"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/textView"
                    android:layout_toLeftOf="@+id/textView"
                    android:layout_toStartOf="@+id/textView"
                    android:text="Qtd."
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_toLeftOf="@+id/textView2"
                    android:text="Descrição"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#000"
                    android:layout_above="@+id/lvProdutos"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>
        </ScrollView>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
